Closed
Bug 45919
Opened 25 years ago
Closed 25 years ago
x-remote doesn't recognize ,noraise
Categories
(Core Graveyard :: X-remote, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: dbaron, Assigned: blizzard)
Details
Attachments
(3 files)
|
948 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.96 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.27 KB,
patch
|
Details | Diff | Splinter Review |
I know just about nothing about X-Remote, so please forgive any misunderstanding
of what's supposed to work
DESCRIPTION: When I use 'gnome-moz-remote' (a little program that rpm
identifies as from gnome-libs-1.0.53-1) while Mozilla is running, Mozilla
responds, but the URLs show up in mozilla with additional information after them.
Command:
gnome-moz-remote --raise http://www.mozilla.org/
Opens:
http://www.mozilla.org/
Command (my default URL handler in my GNOME config):
gnome-moz-remote --newwin http://www.mozilla.org/
Opens:
http://www.mozilla.org/,new-window,%20noraise
Command:
gnome-moz-remote http://www.mozilla.org/
Opens:
http://www.mozilla.org/,%20noraise
STEPS TO REPRODUCE:
* start mozilla
* enter one of the above commands
ACTUAL RESULTS:
* urls open with stuff appended to them (except the first test above)
EXPECTED RESULTS:
* the URL loaded is http://www.mozilla.org/ . Handling the options would be
nice, but that's not quite as important.
DOES NOT WORK CORRECTLY ON:
* Linux, mozilla, 2000-07-19 (my build)
WORKS CORRECTLY ON:
* Linux NN 4.7x
| Assignee | ||
Comment 1•25 years ago
|
||
updating summary to accurate description and accepting.
Status: NEW → ASSIGNED
Summary: X-Remote adds options to end of URLs → x-remote doesn't recognize ,noraise
| Assignee | ||
Comment 2•25 years ago
|
||
Comment 3•25 years ago
|
||
I prefer my patch, which strips the noraise argument off of every command, not
just openURL, and also toggles a PR_BOOL raiseWindow. Patch attached.
Comment 4•25 years ago
|
||
Comment 5•25 years ago
|
||
Comment 6•25 years ago
|
||
The last patch adds support for the "noraise" argument of the remote protocol.
It has is effective for openUrl and openFile. Why we have to different
functions for these two things is another question....
Waiting for review.
Keywords: review
| Assignee | ||
Comment 7•25 years ago
|
||
looks fine to me r=blizzard
Comment 8•25 years ago
|
||
Blizzard, would you please check this in for me? Approval from bendan, review
from you, but I don't have CVS access.
Keywords: review
| Assignee | ||
Comment 9•25 years ago
|
||
will do.
Comment 10•25 years ago
|
||
I'd love to see this get in before we branch for M18, which I suspect is coming
up RSN.
| Assignee | ||
Comment 11•25 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 12•25 years ago
|
||
Tested and working in 2000-09-06-08 build on Linux.
Updated•25 years ago
|
Comment 13•24 years ago
|
||
rs vrfy based on jeffrey's comment.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•