fix for bug #45919.  x-remote understands ,noraise now.  patch from jeffrey baker. r=me, a=brendan